24/01/2006 remove c6 in coxfit6.h from error message posted by Jan de Leeuw, so coxfit6?.c compile
12/02/2006 add example to plot.pedigree
13/02/2006 remove assign.dat in R directory
06/10/2006 add methods to depends list in DESCRIPTION (1.1.0-12) according to R 2.4.0
           recover methods in import list and remove 'Summary' from exportMethods (NAMESPACE) by Kurt Hornik
10/10/2006 remove S3 definitions assoiated with %*% (1.1.0-13) and use setGeneric (environment=NULL invalid in R 2.4.0)
11/10/2006 add \method markup to solve.* and as.matrix.bdsmatrix (1.1.0-14) according to Kurt Hornik
02/01/2007 add ... to as.matrix according to R 2.5.0

1. documented or obvious

.h                      <- Sint and other changes
nlminb                  <- optim
.C()                    <- add PACKAGE = "kinship" as required by R 1.9.0
.First.Lib              <- add nlme, survival, methods
significant:            kinship.so and kinship/R/kinship directly debugged

2. sequence of statements

BDSmatrix.R             <- bdsmatrix.R
BDSmatrix_%_%.R         <- %_%.bdsmatrix.R

3. amend disturbing statements

UseMethod               <- add setGeneric
list or NULL            <- setClassUnion          
unique                  <- add 'missing' to 'bdsmatrix'
setMethod('diag',       <- add nrow=1,ncol=1
setMethod('['           <- add i, j
gchol.bdsmatrix.R       <- omit ... in setMethod('dim') and setMethod('show'

thus ... in the function arguments are dropped


4. other changes

assign                  <- envir as specified in R-FAQ
nDotArgs                <- length(list(...)
object                  <- from in places
diag                    <- setMethod("diag", "diag<-"
gchol                   <- as.matrix()
solve.gchol.bdsmatrix   <- temp@ <--> $
par()$"1em"[2]          <- par()$"cin"[2]/7
plot.pedigree           <- comment on segments at 118,119,124
align.pedigree          <- modify remove()